Adds body for POST /links 208 code response
