# scrapper/src/main/java/edu/java/scrapper/controller/advice/AlreadyExistsControllerAdvice.java
@@ -1,5 +1,6 @@
 package edu.java.scrapper.controller.advice;
 
+import edu.java.model.response.LinkResponse;
 import edu.java.scrapper.exception.LinkAlreadyExistsException;
 import edu.java.scrapper.exception.TgChatAlreadyExistsException;
 import org.springframework.http.HttpStatus;
@@ -10,11 +11,13 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 @RestControllerAdvice
 public class AlreadyExistsControllerAdvice {
 
-    @ExceptionHandler({
-        LinkAlreadyExistsException.class,
-        TgChatAlreadyExistsException.class
-    })
-    public ResponseEntity<Void> handleAlreadyExistsException(RuntimeException e) {
+    @ExceptionHandler(TgChatAlreadyExistsException.class)
+    public ResponseEntity<Void> handleTgChatAlreadyExistsException() {
         return new ResponseEntity<>(HttpStatus.ALREADY_REPORTED);
+    }
+
+    @ExceptionHandler(LinkAlreadyExistsException.class)
+    public ResponseEntity<LinkResponse> handleLinkAlreadyExistsException(LinkAlreadyExistsException e) {
+        return new ResponseEntity<>(e.getLink(), HttpStatus.ALREADY_REPORTED);
     }
 }
